@@ -1,3 +1,8 @@
+Mon Nov 03 15:40:36 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - Fixed an image name in a menu.
+
 Mon Nov 03 14:53:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimMainWindow.cpp:
